test/files/neg/t5365d.check
t5365d.scala:10: warning: match may not be exhaustive.
It would fail on the following input: _
  def extractorOnly(t: T): Unit = t match {
                                  ^
t5365d.scala:14: warning: match may not be exhaustive.
It would fail on the following input: D(_)
  def extractorAndClass(t: T): Unit = t match {
                                      ^
error: No warnings can be incurred under -Xfatal-warnings.
two warnings found
one error found
